# Flask-REST-API-Starter-Kit

./: .gitignore  CONTRIBUTION.md  README.md  generate_example_project.sh  pyproject.toml
flask_api_starter.egg-info/: PKG-INFO
src/flask_api_starter/: cli.py
src/flask_api_starter.egg-info/: PKG-INFO
src/flask_api_starter/template/: requirements.txt
src/flask_api_starter/template/app/: __init__.py  extensions.py
src/flask_api_starter/template/app/blueprints/api/: routes.py
src/flask_api_starter/template/app/blueprints/auth/: routes.py
src/flask_api_starter/template/app/models/: user.py
src/flask_api_starter/template/app/static/: swagger.yaml
src/flask_api_starter/templates/: .env.example
src/flask_api_starter/templates/app/: __init__.py  config.py
src/flask_api_starter/templates/app/static/: swagger.yaml
src/flask_rest_api_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
