[project]
name = "flask-api-starter"
version = "0.1.1"
description = "A scalable Flask API starter with authentication, blueprints, DB setup, and full project generator"
authors = [
  { name = "Paul Mkundika Jr", email = "authenticpaulmeyers@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "Flask",
    "Flask-JWT-Extended",
    "Flask-Migrate",
    "Flask-SQLAlchemy",
    "python-dotenv",
    "Werkzeug"
]

[project.scripts]
flask-api-starter = "flask_api_starter.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["flask_api_starter"]

[tool.setuptools.package-data]
flask_api_starter = ["templates/**"]
